# CRAFT_PGZ

./: .env.example  .gitignore  CLAUDE.analysis.md  CLAUDE.md  Dockerfile  FIXES.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  tailwind.config.js  tailwind.input.css
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_tender_relevance.py  0003_relevance_summary.py  0004_tender_documents.py  0005_relevance_structured.py  0006_blacklist_customers.py  0007_tender_uploads.py  0008_document_analyses.py  0009_economics.py  0009_participation_tracking.py  0010_ai_recommendations.py  0011_merge_economics_tracking.py  0012_drop_ai_recommendations.py  0013_labor_model.py
docs/: analytics-brief.md  architecture.md
src/tender_ingest/: __init__.py  cli.py  company.py  config.py  llm_retry.py  logging.py  normalize.py  pipeline.py
src/tender_ingest/db/: __init__.py  models.py  repository.py  session.py
src/tender_ingest/documents/: __init__.py  analyzer.py  extract.py  prompt.py  report.py
src/tender_ingest/economics/: __init__.py  advisor.py  canon.py  cases.py  engine.py  expertise.py  export.py  labor.py  prompt.py  proposer.py  reviewer.py  sbcp.py  service.py  store.py  xlsx.py
src/tender_ingest/relevance/: __init__.py  factors.py  profile.py  rules.py  scorer.py
tests/: conftest.py  test_arbiter.py  test_documents.py  test_economics.py  test_excel_source.py  test_factors.py  test_normalize.py  test_rules.py  test_tracking_economics.py  test_web.py
tests/fixtures/: Контур.Закупки_30.06.2026.xlsx  Экономика (2).xlsx
(+52 files in other folders)
