[project]
name = "tender-ingest"
version = "0.1.0"
description = "Модуль получения данных о закупках (Фаза 0, v1: выгрузка Контур.Закупок в Excel)"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1",
    "SQLAlchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "structlog>=24.4",
    "click>=8.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "anthropic>=0.40",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "itsdangerous>=2.2",
    "pypdf>=5.1",
    "python-docx>=1.1",
    "reportlab>=4.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
]

[project.scripts]
tender = "tender_ingest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Шаблоны Jinja попадают в wheel автоматически как package data (они внутри пакета).
packages = ["src/tender_ingest"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["openpyxl.*", "docx.*", "reportlab.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
